--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 									src="images/newplot.png" alt=""></a>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
-							<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+							<a target='_blank' href="Bar chart(Practice)/Practice.html" class="image fit"><img
+									src="images/newplot.png" alt=""></a>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
